--- a/post/20230809_1.md
+++ b/post/20230809_1.md
@@ -6,9 +6,25 @@ summary: twit...Xで流行ってたので
 tags: [2023,etc]
 ---
 
-自分語りが流行ってたので、便乗して。
+自分語りが流行ってたので、便乗して自分語り。  
 ふわっと気晴らしだったり時間が空いた時とか、息抜きに徐々に追記していこうかと。
 
-## 出生
+## 出生〜幼稚園
 
-ほげほげ
+19XX年、片田舎にて産声を上げました。親は、専業主婦の母親と、サラリーマンの父です。  
+田舎のどこにでもありそうな、決して裕福ではない家庭です。黒ココアさんの中に残っている最古の記憶は、母が2歳前後の黒ココアさんを腕に抱き、父と大喧嘩してるシーンです…。後々母に聞けば、父が不倫していたとかどうとか。どうしようもない家系だなぁ…。  
+2番目に古い記憶は幼稚園時代です。ビニール袋に水を張り、青い水性ペンを沈めて「凄い…水が青くなってる！」と、よく分からない記憶です。その後幼稚園の先生に怒られたらしいです。その辺はよく覚えていませんが…。  
+
+## 小学生編
+
+## 中学生編
+
+## 高校生編
+
+## 社会人編
+
+## 専門学校編
+
+## 社会人編
+
+## 大学編
