--- a/post/20230809_1.md
+++ b/post/20230809_1.md
@@ -1,8 +1,8 @@
 ---
-title: 半生を反省
+title: きっと何者にもなれない黒ココアさんはどこから来てどこへ行くのか
 date: 2023-08-08
 draft: false
-summary: twit...Xで流行ってたので
+summary: 半生を反省…なんて。
 tags: [2023,etc]
 ---
 
