--- a/post/20230809_1.md
+++ b/post/20230809_1.md
@@ -171,4 +171,4 @@ wtf?????
 競プロerになったり、データエンジニア・データサイエンティストっぽいお仕事タスクが増えたり、SQLのクエリをガリガリ書いたり、分析とかしたりするようなお仕事の流れで、
 「あー…数学ちゃんと勉強しておけばなぁ…微分も積分も何もわからない…」みたいな状態だったので、大学で体系立てて再履修することを決意。通信制大学に通い始めました！
 
-今ここ！終わり！
+今ここ！終わり！！（雑）
