--- a/post/20230809_1.md
+++ b/post/20230809_1.md
@@ -9,15 +9,24 @@ tags: [2023,etc]
 自分語りが流行ってたので、便乗して自分語り。  
 ふわっと気晴らしだったり時間が空いた時とか、息抜きに徐々に追記していこうかと。
 
+さて、ゆうさんロンドン氏の「日本人」やら、ぶりおでん氏の「普通とは」に影響されて半生を反省してみようと筆を執ったは良いものの、何を書こうかと手が止まる。  
+うーん…気の向くままに書いていけばそのうちテーマも固まるかなぁ…。  
 ## 出生〜幼稚園
 
-19XX年、片田舎にて産声を上げました。親は、専業主婦の母親と、サラリーマンの父です。  
-田舎のどこにでもありそうな、決して裕福ではない家庭です。黒ココアさんの中に残っている最古の記憶は、母が2歳前後の黒ココアさんを腕に抱き、父と大喧嘩してるシーンです…。後々母に聞けば、父が不倫していたとかどうとか。どうしようもない家系だなぁ…。  
+19XX年の春、片田舎にて産声を上げました。早生まれです。親は、専業主婦の母親と、サラリーマンの父。地方のどこにでもありそうな、決して裕福ではない家庭です。  
+黒ココアさんの中に残っている最古の記憶は、母が2歳前後の黒ココアさんを腕に抱き、父と大喧嘩してるシーンです…。後々母に聞けば、父が不倫していたとかどうとか。どうしようもない血筋だなぁ…。  
 2番目に古い記憶は幼稚園時代です。ビニール袋に水を張り、青い水性ペンを沈めて「凄い…水が青くなってる！」と、よく分からない記憶です。その後幼稚園の先生に怒られたらしいです。その辺はよく覚えていませんが…。  
-
 ## 小学生編
 
+地方のどこにでもありそうな家庭なので、当たり前のように学区で指定された近くの公立小学校へ。お受験なんて知りません。
+基本的に教室の隅で、数人で遊ぶ陰の者でした。今も、大人数とか陽の場所とかは苦手かも…。  
+小学校1年生での早生まれって、周りの子との差が物凄く大きいんですよね。小学1年生開始時点で6歳の子と、2年生に上がる直前で6歳になる子。入学式時点で365日分の差がついてるわけです。一番年上の子と比べると、17%くらい足りてないのです。  
+
+
+
 ## 中学生編
+
+
 
 ## 高校生編
 
