--- a/post/atcoder/ABC201.md
+++ b/post/atcoder/ABC201.md
@@ -142,11 +142,11 @@ else:
 https://atcoder.jp/contests/abc201/tasks/abc201_e
 
 + 根っこ決めて#BFS して、結果をもっちょもっちょと後処理集計する話
-+ 木の最短パスは #LCA
++ 木の最短パスは #LCA #TIPS 
 	+ とりあえず頂点を1つ根っこにして植えてあげたい
 		+ 1度根っこから #BFS しておけば、どの組み合わせも見れますね。素敵。
 + 全部の$i,j$の組み合わせを探したいけど$(2\times10^5)^2$が通らないので、さてどうしよう問題
-	+ #XOR はbit毎に見ろ
+	+ #XOR はbit毎に見ろ #TIPS
 	+ bit毎に見ていくと、0/1の2択でグルーピングできます
 		+ 根からの距離が0の頂点→1の頂点の数だけ、2^iが答えに加算される
 		+ 後はbit毎に愚直に数えていくイメージ
